# qassemble

./: CNAME  README.md  index.html  mkdocs.yml  profile_gw.py  pyproject.toml
.github/workflows/: deploy-mkdocs.yml
docs/: SerialClassDiagram.md  SerialModules.md  index.md
docs/getting-started/: installation.md  quickstart.md
docs/theory/: dlr.md  greens-function.md  gw-approximation.md  hamiltonian.md  hartree-fock.md
site/: 404.html  CNAME  index.html  sitemap.xml
site/SerialClassDiagram/: index.html
site/SerialModules/: index.html
site/getting-started/installation/: index.html
site/getting-started/quickstart/: index.html
site/search/: search_index.json
site/stylesheets/: extra.css
site/theory/dlr/: index.html
site/theory/greens-function/: index.html
site/theory/gw-approximation/: index.html
site/theory/hamiltonian/: index.html
site/theory/hartree-fock/: index.html
src/: QAssemble.py  QuantumAssemble.py
src/QAssemble/: BLatDyn.py  BLatDyn.py.bak  BLatStc.py  BLocStc.py  BPathDyn.py  BPathStc.py  CorrelationFunction.py  Crystal.py  FLatDyn.py  FLatStc.py  FLocStc.py  FPathStc.py  __init__.py  cli.py  run.py
src/QAssemble/MPI/: BLatDyn.py  BLatStc.py  BLocDyn.py  BLocStc.py  BPathDyn.py  CorrelationFunction.py  Crystal.py  FLatDyn.py  FLatStc.py  FLocDyn.py  FLocStc.py  FPathDyn.py  FPathStc.py  MPIManager.py  Projector.py
src/QAssemble/Serial/: BLatDyn.py  BLatStc.py  BLocDyn.py  BLocStc.py  CorrelationFunction.py  Crystal.py  FLatDyn.py  FLatStc.py  FLocDyn.py  FPathDyn.py  FPathStc.py  FTGrid.py  Projector.py  __init__.py
(+21 files in other folders)
